--- a/scss/_hikes.scss
+++ b/scss/_hikes.scss
@@ -11,7 +11,7 @@
         max-width: 100%;
     }
 
-    .gallery dl {
+    .gallery img {
         float: left;
         margin-right: 15px;
         margin-bottom: 15px;
