removed Google Fonts, adjusted some font sizes to accommodate

--- a/_includes/layouts/hike.njk
+++ b/_includes/layouts/hike.njk
@@ -33,7 +33,7 @@
                 {% endif %}
 
                 <div class="hike-section comments">
-                    <h2>Comments on hiking {{ title }}</h2>
+                    <h2>Comments on {{ title }}</h2>
 
                     <div id="disqus_thread"></div>
                     <script>
