--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -4,9 +4,7 @@
 }
 
 .navbar-brand {
-    font-family: $heading-font;
-    font-size: 2.5em;
-    font-weight: bold;
+    font-size: 2.3em;
     margin: 0;
     padding: 0;
 }
@@ -90,11 +88,12 @@
 }
 
 .navbar .menu {
-    display: none;    
+    display: none;
 
     li a.nav-link {
         color: #444 !important;
-        padding: 10px 14px;
+        font-size: 1.05em;
+        padding: 4px 14px 8px 14px;
         text-decoration: none;
     }
 
