added meta descriptions

--- a/_includes/layouts/hike.njk
+++ b/_includes/layouts/hike.njk
@@ -1,5 +1,6 @@
 {% extends "layouts/base.njk" %}
 {% block header %}
+    <meta name="description" content="Learn about hiking {{ title }} in {{ park }}">
     <script src="https://kit.fontawesome.com/dde1b15fe1.js" crossorigin="anonymous"></script>
 {% endblock %}
 
