--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Alaska Hike Search &ndash; Find Your Next Adventure</title>
+        <meta name="description" content="Your ultimate source of information for hiking trails in Alaska. Find your next adventure!">
         
         {% include 'head.njk' %}
         {% block header %}{% endblock %}
