--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,3 +1,8 @@
+body {
+    /* system font based approach */
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
+
 a {
     color: #0065D1;
 }
