--- a/_includes/layouts/hike.njk
+++ b/_includes/layouts/hike.njk
@@ -2,6 +2,11 @@
 {% block header %}
     <meta name="description" content="Learn about hiking {{ title }} in {{ park }}">
     <script src="https://kit.fontawesome.com/dde1b15fe1.js" crossorigin="anonymous"></script>
+
+    {%- if trailheads | length %}    
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin=""/>
+        <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+    {%- endif %}
 {% endblock %}
 
 {% block content %}
@@ -156,11 +161,9 @@
 
 {% if trailheads | length %}
     {% block footer %}
-        <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js"></script>
-        <link rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css" />
-        <script type="text/javascript" src="/js/maps.min.js?v=20220416"></script>
+        <script type="text/javascript" src="/js/maps.min.js?v=20220602"></script>
         <script type="text/javascript">
-            map_{{ title | slugify | replace("-", "") }}()
+            map_{{ title | slugify | replace("-", "") }}();
         </script>
     {% endblock %}
 {% endif %}
