--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -2,7 +2,7 @@
     background: url(../img/banners/banner2.jpg) no-repeat center center fixed;
     background-size: cover;
 
-    .cover,
+    .cover-heading,
     footer {
         text-align: center;
         text-shadow: 0 2px 3px rgba(0,0,0,.9);
@@ -23,7 +23,7 @@
             font-weight: normal;
             margin-bottom: 20px;
 
-            @media (min-width: 500px) {
+            @media (min-width: 550px) {
                 font-size: 2.7em;
             }
         }
