--- a/_includes/layouts/hike.njk
+++ b/_includes/layouts/hike.njk
@@ -29,10 +29,10 @@
 
                 {%- if attachments | length %}
                     <div class="hike-section gallery">
-                        <h2>Photos</h2>                        
+                        <h2>Photos</h2>
                         {%- for photo in attachments %}
                             <a href="/img/hikes/{{ photo.slug }}.jpg">
-                                <img src="/img/hikes/{{ photo.slug }}-150.jpg" alt="{{ photo.description }}" />
+                                <img src="/img/hikes/{{ photo.slug }}-150.jpg" title="{{ photo.description }}" alt="{{ photo.description }}" />
                             </a>
                         {%- endfor %}
                     </div>
