add cache busting param to css & js based on build date (fixes #13)

--- a/_includes/layouts/hike.njk
+++ b/_includes/layouts/hike.njk
@@ -176,7 +176,7 @@
 
 {%- if trailheads | length %}
     {% block footer %}
-        <script type="text/javascript" src="/js/maps.min.js?v=20220602"></script>
+        <script type="text/javascript" src="/js/maps.min.js?v={{ buildTimestamp }}"></script>
         <script type="text/javascript">
             map_{{ title | slugify | replace("-", "") }}();
         </script>
