--- a/pages/home.njk
+++ b/pages/home.njk
@@ -27,7 +27,7 @@ permalink: /index.html
 {% endblock %}
 
 {% block footer %}
-    <script type="text/javascript" src="/js/maps.min.js?v=20220602"></script>
+    <script type="text/javascript" src="/js/maps.min.js?v={{ buildTimestamp }}"></script>
     <script type="text/javascript">
         map_home();
     </script>
