--- a/_includes/head.njk
+++ b/_includes/head.njk
@@ -12,4 +12,4 @@
 <meta name="theme-color" content="#ffffff">
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-<link rel="stylesheet" href="/css/style.min.css?v=20220607" />
+<link rel="stylesheet" href="/css/style.min.css?v={{ buildTimestamp }}" />
