added logo, adjusted nav color scheme to match (fixes #16)

--- a/_includes/navbar.njk
+++ b/_includes/navbar.njk
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-dark">
     <div class="container-xl">
         <h1 class="navbar-brand"><a href="/">Alaska Hike Search</a></h1>
     </div>
