--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -11,7 +11,7 @@
     .cover {
         background-color: rgba(60, 60, 60, 0.7);
         border-radius: 10px;
-        margin: 50px auto 0 auto;
+        margin: 50px auto 30px auto;
         padding: 10px 20px 20px 20px;
         text-align: center;
         max-width: 1140px;
