updated link for JBER access

--- a/pages/education.njk
+++ b/pages/education.njk
@@ -230,9 +230,9 @@ layout: "layouts/page.njk"
 
 <h3 id="military-land">Military Land</h3>
 <p>Bordering Chugach State Park is military recreational land shared by Fort Richardson and Elmendorf Air Force Base (now known jointly as JBER). You must obtain a permit (including everyone in your party) before entering this area or you will be heavily fined. In addition to the permit, you must check in using the website below, and first check that the specific area you're planning to hike in isn't closed for military exercises. You are also expected to check out to let them know you have left the area.</p>
-<p>Obtaining the permit is very easy. Go the website below and signup, it takes 2 minutes. The are also maps showing the recreation areas, off limits areas, and instructions on how to check in/out.</p>
+<p>Obtaining the permit is very easy. Go the website below and signup, it takes 2 minutes. There are also maps showing the recreation areas, off limits areas, and instructions on how to check in/out.</p>
 <ul>
-	<li><a href="https://jber.isportsman.net/" target="_blank">JBER iSportsman</a></li>
+	<li><a href="https://jber.recaccess.com/" target="_blank">JBER RecAccess</a></li>
 </ul>
 <p><strong>Trails in the Military Recreation Area:</strong></p>
 <ul>
